fix pfp visual glitch on mobile

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -12,8 +12,13 @@
   text-align: center;
   position: relative;
   color: white;
-  padding: 4rem;
+  padding: 4rem 2rem;
   pointer-events: none;
+}
+
+.main-content > img {
+  display: block;
+  margin: auto;
 }
 
 .picture {
